--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2023.5.7=hbcca054_0
   - charset-normalizer=3.1.0=pyhd8ed1ab_0
-  - cudatoolkit=11.6.0=hecad31d_10
+  - cudatoolkit=11.7.0
   - ffmpeg=4.3=hf484d3e_0
   - freetype=2.10.4=h0708190_1
   - gmp=6.2.1=h58526e2_0
@@ -187,10 +187,10 @@ dependencies:
     - tokenizers==0.13.3
     - toml==0.10.2
     - toolz==0.12.0
-    - torch==2.0.1
+    - torch==1.13.0
     - torch-fidelity==0.3.0
     - torchmetrics==0.11.4
-    - torchvision==0.15.2
+    - torchvision==0.14.0
     - tornado==6.3.2
     - tqdm==4.65.0
     - transformers==4.29.2
